aws-lbc/lbc-2/3-ingress.yaml
# This will create a Layer 7 AWS ALB
---
# Supported annotations
# https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.7/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  namespace: lbc-2
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # App should have a health check that returns 200 OK
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  ingressClassName: alb
  rules:
    - host: ex.myapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp
                port:
                  number: 8080
# kubectl apply -f lbc-2
# kubectl get ing -n lbc-2
# Use curl -i --header "Host: ex.myapp.com" http://.....aws.com/about
# kubectl delete ns lbc-2
